--- a/css/bwizard.css
+++ b/css/bwizard.css
@@ -43,10 +43,11 @@
 	    border-bottom: 20px inset transparent; border-left: 20px solid #efefef; border-top: 20px inset transparent;
 	    content: "";
 	    z-index: 2; }
-	.bwizard-steps .badge {
-	    position: relative;
-	    top: -1px;
-	    margin: 0 5px 0 0; }
+	.bwizard-steps .label {
+		margin: 0 5px 0 0;
+		padding: 1px 5px 2px;
+		position: relative;
+		top: -1px;}
 	.bwizard-steps .current {
 	    color: #fff;
 	    background: #007ACC; }
