--- a/css/bwizard.css
+++ b/css/bwizard.css
@@ -1,4 +1,4 @@
-﻿bwizard {
+﻿.bwizard {
     position: relative; }
 .bwizard .well {
     margin: 3px 0 }
@@ -16,33 +16,33 @@
 	    padding: 12px 17px 10px 30px;
 	    background: #efefef;
 	    zoom:1; *display: inline; *padding-left: 17px; }
-	.bwizard-steps li:first-child {
-	    -moz-border-radius: 4px 0 0 4px;
-	    -webkit-border-radius: 4px 0 0 4px;
-	    border-radius: 4px 0 0 4px;
-	    padding-left: 12px; }
-	.bwizard-steps li:first-child:before {
-	    border: none; }
-	.bwizard-steps li:last-child {
-	    -moz-border-radius: 0 4px 4px 0;
-	    -webkit-border-radius: 0 4px 4px 0;
-	    border-radius: 0 4px 4px 0;
-	    margin-right: 0; }
-	.bwizard-steps li:last-child:after {
-	    border: none; }
-	.bwizard-steps li:before {
-	    position: absolute;
-	    left: 0; top: 0;
-	    height: 0px; width: 0px;
-	    border-bottom: 20px inset transparent; border-left: 20px solid #fff; border-top: 20px inset transparent;
-	    content: ""; }
-	.bwizard-steps li:after {
-	    position: absolute;
-	    right: -20px; top: 0;
-	    height: 0px; width: 0px;
-	    border-bottom: 20px inset transparent; border-left: 20px solid #efefef; border-top: 20px inset transparent;
-	    content: "";
-	    z-index: 2; }
+		.bwizard-steps li:first-child {
+		    -moz-border-radius: 4px 0 0 4px;
+		    -webkit-border-radius: 4px 0 0 4px;
+		    border-radius: 4px 0 0 4px;
+		    padding-left: 12px; }
+		.bwizard-steps li:first-child:before {
+		    border: none; }
+		.bwizard-steps li:last-child {
+		    -moz-border-radius: 0 4px 4px 0;
+		    -webkit-border-radius: 0 4px 4px 0;
+		    border-radius: 0 4px 4px 0;
+		    margin-right: 0; }
+		.bwizard-steps li:last-child:after {
+		    border: none; }
+		.bwizard-steps li:before {
+		    position: absolute;
+		    left: 0; top: 0;
+		    height: 0; width: 0;
+		    border-bottom: 20px inset transparent; border-left: 20px solid #fff; border-top: 20px inset transparent;
+		    content: ""; }
+		.bwizard-steps li:after {
+		    position: absolute;
+		    right: -20px; top: 0;
+		    height: 0; width: 0;
+		    border-bottom: 20px inset transparent; border-left: 20px solid #efefef; border-top: 20px inset transparent;
+		    content: "";
+		    z-index: 2; }
 	.bwizard-steps .label {
 		margin: 0 5px 0 0;
 		padding: 1px 5px 2px;
@@ -51,8 +51,8 @@
 	.bwizard-steps .current {
 	    color: #fff;
 	    background: #007ACC; }
-	.bwizard-steps .current:after {
-	    border-left-color: #007ACC; }
+		.bwizard-steps .current:after {
+		    border-left-color: #007ACC; }
 @media (max-width: 480px) {
 	/*badges only on small screens*/
 		.bwizard-steps li,
@@ -61,7 +61,7 @@
 		.bwizard-steps li:last-child {
 			background-color: transparent;
 			padding: 0;
-			margin-right: 0px;}
+			margin-right: 0;}
 		.bwizard-steps li:after,
 		.bwizard-steps li:before {
 			border: none;
